Fix inverted toolbox in high contrast

--- a/theme/toolbox.less
+++ b/theme/toolbox.less
@@ -299,12 +299,22 @@ div.blocklyTreeIcon span {
     Inverted Toolbox
 *******************************/
 #root.hc .invertedToolbox {
+    div.blocklyTreeRow {
+        background-color: var(--pxt-primary-background);
+        color: var(--pxt-primary-foreground);
+    }
+
     div.blocklyTreeRow .blocklyTreeIcon {
         color: var(--block-meta-color);
     }
 
-    div.blocklyTreeRow.blocklyTreeSelected .blocklyTreeIcon {
-        color: var(--pxt-target-background3);
+    div.blocklyTreeRow.blocklyTreeSelected {
+        background-color: var(--block-meta-color);
+        color: var(--pxt-primary-foreground);
+
+        .blocklyTreeIcon, .blocklyTreeLabel {
+            color: var(--pxt-primary-foreground);
+        }
     }
 }
 
